src/components/form-view/form-view.scss
$barcode-fill-color: #f0f0f0;

form-view, .form-view{
	.selection{
		ion-item{
			display: flex;
			align-items: center !important;
		}
		[icon-only]{
			padding: 0 12px !important;
		}
	}
	width: 100%;

	ion-label{
		font-size: 1em !important;
		color: black !important;
	}

	.image-picker{
		padding: 20px 0 !important;
	}

	.item-ios.item-input.ng-invalid.ng-touched:not(.input-has-focus) .item-inner,
	.item-md.item-input.ng-invalid.ng-touched:not(.input-has-focus) .item-inner,
	.item-ios.item-input.ng-invalid.ng-dirty:not(.input-has-focus) .item-inner,
	.item-md.item-input.ng-invalid.ng-dirty:not(.input-has-focus) .item-inner {
		border-bottom-color: #f53d3d;
		box-shadow: inset 0 -1px 0 0 #f53d3d;
	}

	.item-ios.item-input.ng-valid.input-has-value:not(.input-has-focus) .item-inner,
	.item-md.item-input.ng-valid.input-has-value:not(.input-has-focus) .item-inner {
		border-bottom-color: #32db64;
		box-shadow: inset 0 -1px 0 0 #32db64;
	}

	ion-label.required:after{
		content: "*";
		font-weight: bold;
		padding-left: 5px;
		color: red;
	}

  .invalid {
    ion-label.element-name {
      color: red !important;
    }
  }

	.text-input[disabled] {
		opacity: .8;
	}

	.checkbox-disabled, .item-checkbox-disabled ion-label {
		opacity: 0.8 !important;
		pointer-events: none;
	}

	.item-select-disabled ion-label {
		opacity: 1;
	}

	.select-disabled, .item-select-disabled ion-label {
		opacity: .8;
	}

	.item-datetime-disabled ion-label {
		opacity: 1;
	}

	.datetime-disabled, .item-datetime-disabled ion-label {
		opacity: .8;
	}

	.item-radio-disabled ion-label {
		opacity: 1 !important;
	}

	.radio-disabled, .item-radio-disabled ion-label {
		opacity: .8 !important;
	}

	&.queued .from-barcode,
	&.queued simple-name.from-barcode ion-row,
  &.queued address.from-barcode ion-row {
		background-color: $barcode-fill-color;

		& * {
			border: none !important;
			box-shadow: none !important;
		}

		&  .input {
			color: grey;
			font-style: italic;
		}
	}

	&.queued simple-name.from-barcode ion-row ion-item,
  &.queued address.from-barcode ion-row ion-item {
		background-color: $barcode-fill-color;
	}

  .hidden {
    display: none;
  }

  .spacer{
	width: 1.5px;
	background-color: lightgray;
	margin: 5px;
  }
}

